Itr started and ended fixing

BUG: 173246

But it's much more. Until know the recording of shortcuts went like this:

Press some modifiers, type some keys. The moment you released a modifier
recording was stopped. There were some problems:

1. The resulting shortcut was not as expected CTRL-A,CTRL-B but CTRL-A,b.
2. It was impossible to enter CTRL-A,CTRL-B.
3. It was impossible to enter CTRL-A,SHIFT-B
4. (Bug 173246)

This patch hopefully fixes all of them.

svn path=/trunk/KDE/kdelibs/; revision=876224